# cmake_project_template

./: CMakeLists.txt  CMakePresets.json  main.cpp  test_main.cpp
.github/workflows/: build_cmake.yml  mac_cmake.yml  ubuntu_cmake.yml  windows_cmake.yml
include/: init_core.h
src/: init_core.cpp
tests/: t-index.cpp  t-index.h
